photo path change

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="middle-container">
         <div class="profile ">
-          <img class="profile-img" src=" C:\Users\ADMIN\OneDrive\Desktop\Web dev\CSS-My Site\images\Muskan's profile.jpeg" alt="profile-img">
+          <img class="profile-img" src="images\Muskan's profile.jpeg" alt="profile-img">
           <h2>Hello.</h2>
           <p class="Intro">I'm a Computer Science Engineering Student at Vellore Institute Of Technology, Bhopal. I'm from Mumbai, and have interest in coding, fittness and music.</p>
         </div>
