path changes of skill1 and designing image

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="Code-img" src="C:\Users\ADMIN\OneDrive\Desktop\Web dev\CSS-My Site\images\Skill1.jpg" alt="Html-Css-java">
+            <img class="Code-img" src="images\Skill1.jpg" alt="Html-Css-java">
             <h3>Development</h3>
             <p>I have Expertise in Web Development and in Java programming language </p>
           </div>
           <div class="skill-row">
-            <img class="Design-img" src="C:\Users\ADMIN\OneDrive\Desktop\Web dev\CSS-My Site\images\Design.jpg" alt="skill-img">
+            <img class="Design-img" src="images\Design.jpg" alt="skill-img">
             <h3>Designing</h3>
             <p>I also have knowlege of graphic designing and figma tool.</p>
           </div>
